tests/testcases/errors/BCE0125-1.boo
"""
BCE0125-1.boo(4,6): BCE0125: Invalid declaration type 'void'.
"""
i as void
